--- a/src/GLES2/compiler/Compiler.vcxproj.filters
+++ b/src/GLES2/compiler/Compiler.vcxproj.filters
@@ -77,9 +77,6 @@
     <ClCompile Include="glslang_tab.cpp">
       <Filter>Source Files\generated</Filter>
     </ClCompile>
-    <ClCompile Include="DetectRecursion.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="OutputASM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -96,6 +93,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="InitializeParseContext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AnalyzeCallDepth.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -169,9 +169,6 @@
     <ClInclude Include="glslang_tab.h">
       <Filter>Header Files\generated</Filter>
     </ClInclude>
-    <ClInclude Include="DetectRecursion.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\GLSLANG\ShaderLang.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -188,6 +185,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Pragma.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AnalyzeCallDepth.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
