--- a/src/GLES2/libEGL/libEGL.cbp
+++ b/src/GLES2/libEGL/libEGL.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug x86">
-				<Option output="./../../bin/x86/Debug/libEGL.so" prefix_auto="0" extension_auto="0" />
+				<Option output="./../../bin/x86/Debug/libEGL.so.1" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x86/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -22,7 +22,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release x86">
-				<Option output="./../../bin/x86/Release/libEGL.so" prefix_auto="0" extension_auto="0" />
+				<Option output="./../../bin/x86/Release/libEGL.so.1" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x86/Release/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -40,7 +40,7 @@
 				</Linker>
 			</Target>
 			<Target title="Debug x64">
-				<Option output="./../../bin/x64/Debug/libEGL.so" prefix_auto="0" extension_auto="0" />
+				<Option output="./../../bin/x64/Debug/libEGL.so.1" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x64/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -56,7 +56,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release x64">
-				<Option output="./../../bin/x64/Release/libEGL.so" prefix_auto="0" extension_auto="0" />
+				<Option output="./../../bin/x64/Release/libEGL.so.1" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x64/Release/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
