--- a/src/GLES2/libGLESv2/libGLESv2.cbp
+++ b/src/GLES2/libGLESv2/libGLESv2.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug x86">
-				<Option output="./../../bin/x86/Debug/libGLESv2.so" prefix_auto="0" extension_auto="0" />
+				<Option output="./../../bin/x86/Debug/libGLESv2.so.2" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x86/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -23,7 +23,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release x86">
-				<Option output="./../../bin/x86/Release/libGLESv2.so" prefix_auto="0" extension_auto="0" />
+				<Option output="./../../bin/x86/Release/libGLESv2.so.2" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x86/Release/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -47,7 +47,7 @@
 				</Linker>
 			</Target>
 			<Target title="Debug x64">
-				<Option output="./../../bin/x64/Debug/libGLESv2.so" prefix_auto="0" extension_auto="0" />
+				<Option output="./../../bin/x64/Debug/libGLESv2.so.2" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x64/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -64,7 +64,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release x64">
-				<Option output="./../../bin/x64/Release/libGLESv2.so" prefix_auto="0" extension_auto="0" />
+				<Option output="./../../bin/x64/Release/libGLESv2.so.2" prefix_auto="0" extension_auto="0" />
 				<Option object_output="obj/x64/Release/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
