Modify pnacl subzero to be able to read pnacl bitcode files.
BUG=None
R=jfb@chromium.org, stichnot@chromium.org

Review URL: https://codereview.chromium.org/277033003

--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -32,7 +32,13 @@ config.substitutions.append(('%{python}', sys.executable))
 llvmbinpath = os.path.abspath(os.environ.get('LLVM_BIN_PATH'))
 
 # Finding Subzero tools
-config.substitutions.append(('%llvm2ice', os.path.join(bin_root, 'llvm2ice')))
+llvm2icetool = os.path.join(bin_root, 'llvm2ice')
+config.substitutions.append(
+  ('%llvm2iceinsts', ' '.join([os.path.join(bin_root, 'llvm2iceinsts.py'),
+                               '--llvm2ice', llvm2icetool,
+                               '--llvm-bin-path', llvmbinpath
+                             ])))
+config.substitutions.append(('%llvm2ice', llvm2icetool))
 config.substitutions.append(('%szdiff', os.path.join(bin_root, 'szdiff.py')))
 
 llvmbintools = ['FileCheck']
