--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -39,6 +39,7 @@ SRCS= \
 	IceGlobalContext.cpp \
 	IceInst.cpp \
 	IceInstX8632.cpp \
+	IceIntrinsics.cpp \
 	IceLiveness.cpp \
 	IceOperand.cpp \
 	IceRegAlloc.cpp \
