Refactor llvm2ice so that Ice can be built while reading bitcode.
BUG=None
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/350933002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -36,6 +36,7 @@ LDFLAGS := -m32
 SRCS= \
 	IceCfg.cpp \
 	IceCfgNode.cpp \
+	IceConverter.cpp \
 	IceGlobalContext.cpp \
 	IceInst.cpp \
 	IceInstX8632.cpp \
