--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -30,7 +30,7 @@ LLVM_LDFLAGS := `$(LLVM_BIN_PATH)/llvm-config --ldflags --libs`
 OPTLEVEL := -O0
 CXX := g++
 CXXFLAGS := -Wall -Wextra -Werror -fno-rtti -fno-exceptions \
-	$(OPTLEVEL) -g $(LLVM_CXXFLAGS) -m32
+	$(OPTLEVEL) -g $(LLVM_CXXFLAGS) -m32 -Wno-error=unused-parameter
 LDFLAGS := -m32
 
 SRCS= \
@@ -46,8 +46,10 @@ SRCS= \
 	IceRegAlloc.cpp \
 	IceTargetLowering.cpp \
 	IceTargetLoweringX8632.cpp \
+	IceTranslator.cpp \
 	IceTypes.cpp \
-	llvm2ice.cpp
+	llvm2ice.cpp \
+	PNaClTranslator.cpp
 
 OBJS=$(patsubst %.cpp, build/%.o, $(SRCS))
 
