--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -42,7 +42,7 @@ config.substitutions.append(
 config.substitutions.append(('%llvm2ice', llvm2icetool))
 config.substitutions.append(('%szdiff', os.path.join(bin_root, 'szdiff.py')))
 
-llvmbintools = [r"\bFileCheck\b", r"\bnot\b"]
+llvmbintools = [r"\bFileCheck\b", r"\bllvm-mc\b", r"\bnot\b"]
 
 for tool in llvmbintools:
   # The re.sub() line is adapted from one of LLVM's lit.cfg files.
