Subzero: A few fixes toward running larger programs.
1. Add 'llvm2ice -disable-globals' to disable Subzero translation of
global initializers, since full support isn't yet implemented.

2. Change the names of intra-block branch target labels to avoid
collisions with basic block labels.

3. Fix lowering of "br i1 <constant>, label ...", which was producing
invalid instructions like "cmp 1, 0".

4. Fix the "make format-diff" operation, which was diffing against the wrong target.

BUG= none
R=wala@chromium.org

Review URL: https://codereview.chromium.org/449093002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -103,7 +103,7 @@ else
   CLANG_FORMAT_DIFF = /usr/lib/clang-format/clang-format-diff.py
 endif
 format-diff:
-	git diff -U0 HEAD^ | \
+	git diff -U0 `git merge-base HEAD master` | \
 	$(CLANG_FORMAT_DIFF) -p1 -style=LLVM -i
 
 clean:
