--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -56,6 +56,7 @@ SRCS= \
 	IceLiveness.cpp \
 	IceOperand.cpp \
 	IceRegAlloc.cpp \
+        IceRNG.cpp \
 	IceTargetLowering.cpp \
 	IceTargetLoweringX8632.cpp \
 	IceTranslator.cpp \
