--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -83,9 +83,11 @@ $(OBJS): | build
 build:
 	@mkdir -p $@
 
-check: llvm2ice
+check-lit: llvm2ice
 	LLVM_BIN_PATH=$(LLVM_BIN_PATH) \
 	$(LLVM_SRC_PATH)/utils/lit/lit.py -sv tests_lit
+
+check: check-lit
 	(cd crosstest; LLVM_BIN_PATH=$(LLVM_BIN_PATH) ./runtests.sh)
 
 # TODO: Fix the use of wildcards.
