Subzero: Fix the link command for Trusty.
With the original link command, -lpthread comes before some other LLVM libraries, and this ends up causing undefined pthreads symbols.  The new link command makes sure the -lpthread part comes last.

BUG= none
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/514723004

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -34,7 +34,8 @@ $(info Using HOST_ARCH     = $(HOST_ARCH))
 $(info -----------------------------------------------)
 
 LLVM_CXXFLAGS := `$(LLVM_BIN_PATH)/llvm-config --cxxflags`
-LLVM_LDFLAGS := `$(LLVM_BIN_PATH)/llvm-config --ldflags --libs`
+LLVM_LDFLAGS := `$(LLVM_BIN_PATH)/llvm-config --libs` \
+                `$(LLVM_BIN_PATH)/llvm-config --ldflags`
 
 # It's recommended that CXX matches the compiler you used to build LLVM itself.
 OPTLEVEL := -O0
