Subzero: Move python scripts into a common pydir.
This makes it much easier to run scripts from different working directories, as long as they are run somewhere under the native_client directory.

BUG= none
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/554013002

--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -9,6 +9,9 @@ import sys
 
 import lit.formats
 
+sys.path.insert(0, 'pydir')
+from utils import FindBaseNaCl
+
 # name: The name of this test suite.
 config.name = 'subzero'
 
@@ -23,10 +26,12 @@ config.test_source_root = os.path.dirname(__file__)
 config.test_exec_root = config.test_source_root
 config.target_triple = '(unused)'
 
-src_root = os.path.abspath(os.path.join(config.test_source_root, '..'))
+src_root = os.path.join(FindBaseNaCl(), 'toolchain_build/src/subzero')
 bin_root = src_root
 config.substitutions.append(('%{src_root}', src_root))
 config.substitutions.append(('%{python}', sys.executable))
+
+pydir = os.path.join(bin_root, 'pydir')
 
 # Finding LLVM binary tools. All tools used in the tests must be listed in
 # the llvmbintools list.
@@ -35,12 +40,12 @@ llvmbinpath = os.path.abspath(os.environ.get('LLVM_BIN_PATH'))
 # Finding Subzero tools
 llvm2icetool = os.path.join(bin_root, 'llvm2ice')
 config.substitutions.append(
-  ('%llvm2iceinsts', ' '.join([os.path.join(bin_root, 'llvm2iceinsts.py'),
+  ('%llvm2iceinsts', ' '.join([os.path.join(pydir, 'llvm2iceinsts.py'),
                                '--llvm2ice', llvm2icetool,
                                '--llvm-bin-path', llvmbinpath
                              ])))
 config.substitutions.append(('%llvm2ice', llvm2icetool))
-config.substitutions.append(('%szdiff', os.path.join(bin_root, 'szdiff.py')))
+config.substitutions.append(('%szdiff', os.path.join(pydir, 'szdiff.py')))
 
 llvmbintools = [r"\bFileCheck\b", r"\bllvm-as\b", r"\bllvm-mc\b",
                 r"\bllvm-objdump\b", r"\bnot\b", r"\bpnacl-freeze\b"]
