List Subzero's local optlevel flags after LLVM's cxxflags (precedence).
Ended up needing to fix the InstX8632Lockable error that JF ran into
now that -O0 is really -O0:
https://codereview.chromium.org/512933006/

BUG=none
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/557933002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -41,8 +41,8 @@ LLVM_LDFLAGS := `$(LLVM_BIN_PATH)/llvm-config --libs` \
 OPTLEVEL := -O0
 CXX := g++
 
-CXXFLAGS := -Wall -Wextra -Werror -fno-rtti -fno-exceptions \
-	$(OPTLEVEL) -g $(LLVM_CXXFLAGS) $(HOST_FLAGS) \
+CXXFLAGS := $(LLVM_CXXFLAGS) -Wall -Wextra -Werror -fno-rtti \
+	-fno-exceptions $(OPTLEVEL) -g $(HOST_FLAGS) \
 	-Wno-error=unused-parameter
 LDFLAGS := $(HOST_FLAGS)
 
