Add forward instruction declaration to Subzero bitcode reader.
BUG= https://code.google.com/p/nativeclient/issues/detail?id=3892
R=jvoung@chromium.org, stichnot@chromium.org

Review URL: https://codereview.chromium.org/576853002

--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -48,7 +48,8 @@ config.substitutions.append(('%llvm2ice', llvm2icetool))
 config.substitutions.append(('%szdiff', os.path.join(pydir, 'szdiff.py')))
 
 llvmbintools = [r"\bFileCheck\b", r"\bllvm-as\b", r"\bllvm-mc\b",
-                r"\bllvm-objdump\b", r"\bnot\b", r"\bpnacl-freeze\b"]
+                r"\bllvm-objdump\b", r"\bnot\b", r"\bpnacl-freeze\b",
+                r"\bpnacl-bcdis\b"]
 
 for tool in llvmbintools:
   # The re.sub() line is adapted from one of LLVM's lit.cfg files.
