--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -17,18 +17,18 @@ LLVM_SRC_PATH ?= ../llvm
 # process. It should contain the tools like opt, llc and clang. The default
 # reflects a debug build with autotools (configure & make).
 LLVM_BIN_PATH ?= $(shell readlink -e \
-	../../out/llvm_i686_linux_work/Release+Asserts/bin)
+	../../out/llvm_x86_64_linux_work/Release+Asserts/bin)
 
 # LIBCXX_INSTALL_PATH is the directory where libc++ is located. It should
 # contain header files and corresponding libraries
 LIBCXX_INSTALL_PATH ?= $(shell readlink -e \
-	../../../toolchain/linux_x86/pnacl_newlib/host_x86_32)
+	../../../toolchain/linux_x86/pnacl_newlib)
 
 # CLANG_PATH is the location of the clang compiler to use.
 CLANG_PATH ?= $(shell readlink -e \
 	../../../../third_party/llvm-build/Release+Asserts/bin)
 
-HOST_ARCH ?= x86
+HOST_ARCH ?= x86_64
 ifeq ($(HOST_ARCH),x86_64)
   HOST_FLAGS = -m64 -stdlib=libc++
 else
