Clean up run script to use for testing Subzero.
Adds the python script run-llvm2ice.py (was llvm2iceinsts.py) that
automatically handles conversion of LLVM source to a PEXE file,
and then runs llvm2ice on the corresponding PEXE file.

Also, defines three paths in tests, based on the executable chosen:

  %lc2i - Directly reads from LLVM source, and converts to Subzero.
  %l2i  - Parses a PEXE file into LLVM IR, and converts to Subzero.
  %p2i  - Parses a PEXE directly into Subzero.

Note that for all three executables, the same arguments can be used,
making it easy to change how the input is handled.

Also moves tests to use %p2i whenever possible.

BUG= https://code.google.com/p/nativeclient/issues/detail?id=3892
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/600043002

--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -39,11 +39,33 @@ llvmbinpath = os.path.abspath(os.environ.get('LLVM_BIN_PATH'))
 
 # Finding Subzero tools
 llvm2icetool = os.path.join(bin_root, 'llvm2ice')
+
+# Convert LLVM source to PNaCl bitcode, read using the
+# Subzero bitcode reader, and then translate.
 config.substitutions.append(
-  ('%llvm2iceinsts', ' '.join([os.path.join(pydir, 'llvm2iceinsts.py'),
-                               '--llvm2ice', llvm2icetool,
-                               '--llvm-bin-path', llvmbinpath
-                             ])))
+  ('%p2i', ' '.join([os.path.join(pydir, 'run-llvm2ice.py'),
+                     '--llvm2ice', llvm2icetool,
+                     '--llvm-bin-path', llvmbinpath
+                    ])))
+
+# Convert LLVM source to PNaCl bitcode, read using the PNaCl bitcode reader,
+# convert to ICE using the ICE Converter, and then translate.
+# TODO(kschimpf) Deprecated, remove once p2i working.
+config.substitutions.append(
+  ('%l2i', ' '.join([os.path.join(pydir, 'run-llvm2ice.py'),
+                     '--llvm', '--llvm2ice', llvm2icetool,
+                     '--llvm-bin-path', llvmbinpath
+                    ])))
+
+# Read LLVM source, convert to ICE using the ICE converter, and then translate.
+# Note: l2i is preferred over lc2i, since it uses PNaCl bitcode.
+# TODO(kschimpf) Deprecated, remove once p2i working.
+config.substitutions.append(
+  ('%lc2i', ' '.join([os.path.join(pydir, 'run-llvm2ice.py'),
+                      '--llvm-source', '--llvm2ice', llvm2icetool,
+                      '--llvm-bin-path', llvmbinpath
+                    ])))
+
 config.substitutions.append(('%llvm2ice', llvm2icetool))
 config.substitutions.append(('%szdiff', os.path.join(pydir, 'szdiff.py')))
 
