Introduce model of global initializers in Subzero.
Modifies both LLVM to ICE converter, and Subzero's bitcode reader,
to build Subzero's global initializers. Modifies target lowering
routines for global initializers to use this new model.

Also modifies both to now handle relocations in global variable
initializers.

BUG=None
R=jvoung@chromium.org, stichnot@chromium.org

Review URL: https://codereview.chromium.org/624663002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -80,6 +80,7 @@ SRCS= \
 	IceCfgNode.cpp \
 	IceConverter.cpp \
 	IceGlobalContext.cpp \
+	IceGlobalInits.cpp \
 	IceInst.cpp \
 	IceInstX8632.cpp \
 	IceIntrinsics.cpp \
